--- a/web/webInterface/app/views/home/index.html.erb
+++ b/web/webInterface/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
 <h1> Spaghetti Tester</h1>
 <h3> a web ui testing system </h3>
-
 <div class="container content_area">
   <h2> Start a Test </h2>
   <hr/>
@@ -40,7 +39,7 @@
       <div class="form-group">
         <label for="testModuleSelect">Select Test Module</label>
         <select name="testModule" class="form-control" id="testModuleSelect" size="3">
-          <% @testModuleNames.each do |testModule|%>
+          <% testModuleList.each do |testModule|%>
             <option> <%=testModule%> </option>
           <% end %>
         </select>
