--- a/web/webInterface/app/assets/stylesheets/home.scss
+++ b/web/webInterface/app/assets/stylesheets/home.scss
@@ -67,3 +67,11 @@ hr {
   margin-bottom: 5px;
   display: inline-block;
 }
+
+.test-output {
+  width:100%;
+  min-height: 300px;
+  background-color: #000000bb;
+  border-radius: 5px;
+  color: #00ff00;
+}
