Spaghetti test working ++ + test run now async! test output shows up like travis! + failure / success now detected! + added input white-list to prevent command injection .... I hope. + changed test lookup logic. module must start with, "test" in order to be displayed,   this allows common modules use by all tests to remain hidden. + added new test, "testIsJuno" this detects if the oscar server is Juno vs normal oscar.

--- a/web/app/assets/stylesheets/home.scss
+++ b/web/app/assets/stylesheets/home.scss
@@ -31,7 +31,7 @@
   display: inline-block;
 }
 
-.test-output {
+#test-output {
   width:100%;
   min-height: 300px;
   background-color: #000000bb;
